Alterando projeto Java-Kubernetes